# flowEE

./: CMakeLists.txt  LICENSE  README.md  elementResidualMethod.cpp  elementResidualMethod.h  ns_errorEstimation.h  setup.sh
